# opencode-pod-plugin

./: .gitignore  PROGRESS.md  README.md  SPEC.md  flake.nix
.github/workflows/: build-publish.yml  ci.yml
deploy/: clusterrolebinding.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  package-cache-pvc.yaml  plugin-role.yaml  plugin-rolebinding.yaml  plugin-serviceaccount.yaml  service.yaml
docs/: cluster-setup.md  sandbox-image.md
opencode-k8s-sandbox/.github/workflows/: build-publish.yml  ci.yml
opencode-k8s-sandbox/deploy/: clusterrole.yaml  deployment.yaml  ingress.yaml.example  kustomization.yaml  networkpolicy.yaml  plugin-role.yaml  service.yaml  serviceaccount.yaml
opencode-k8s-sandbox/docs/: architecture.md  cluster-setup.md  sandbox-image.md
opencode-k8s-sandbox/plugin/: package.json
opencode-k8s-sandbox/plugin/src/: config.ts  hooks.ts  index.ts  sessionStore.ts
opencode-k8s-sandbox/router/: Cargo.toml  Dockerfile
opencode-k8s-sandbox/router/src/: config.rs  health.rs  index.rs  main.rs  proxy.rs
opencode-k8s-sandbox/sandbox-image/: Dockerfile
opencode-k8s-sandbox/scripts/: kind-down.sh  kind-up.sh  validate.sh
opencode-k8s-sandbox/scripts/integration/: test-plugin-pod-lifecycle.sh  test-repo-selection.sh  test-router-routing.sh  (+1 more)
plugin/: package-lock.json  package.json
plugin/src/: config.ts  hooks.ts  index.ts  repos.ts
router/: Cargo.toml  Dockerfile
router/src/: proxy.rs
sandbox-image/: Dockerfile
scripts/: create-test-repo.sh  kind-up.sh
scripts/integration/: test-plugin-exec.sh  test-router-pod-churn.sh
(+17 files in other folders)
