[package]
name = "opencode-k8s-sandbox-router"
version = "0.1.0"
edition = "2021"
description = "Routes traffic to opencode sandboxes in Kubernetes"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["trace"] }
kube = { version = "0.93", features = ["runtime", "client"] }
k8s-openapi = { version = "0.22", features = ["v1_30"] }
httparse = "1"
regex = "1"
once_cell = "1"
futures = "0.3.31"
bytes = "1"
prometheus = { version = "0.13", features = ["process"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
