[package]
name = "opencode-k8s-sandbox-router"
version = "0.1.0"
edition = "2021"
description = "Routes traffic to opencode sandboxes in Kubernetes"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["trace"] }
